public class Asociación {
}
