public class Localización {
}
