public class Miembro_de_la_junta_directiva {
}
