@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

class Asociación {
    newLocation(l : Location) : void
    newEvent(e : Event) : void
    newPerson(p : Person) : void
    informEvent(e : Location) : void
    register(m : Member,e : Event) : void
}
class Localización {
    description : String
    address : String
}
class Evento {
    date : Date
    description : String
    assign(l : Location) : void
}
class Conferencia {
    max_attendees : Integer
}
class Persona {
    name : String
}
class Miembro {
    e-mail : String
}
class Miembro_de_la_junta_directiva
class Reunion_de_la_junta_directiva

Conferencia                    --^  Evento
Reunion_de_la_junta_directiva  --^  Evento

Miembro                        --^  Persona
Miembro_de_la_junta_directiva  --^  Miembro

Asociación o-- "0..*" Localización
Asociación o-- "0..*" Evento
Asociación o-- "0..*" Persona

Conferencia "0..*" -- "0..*" Persona : attendessTo
Evento "0..*" -- "0..*" Miembro : attendessTo
Evento "1" -- "0..*" Localización : is Located in
Miembro_de_la_junta_directiva -- "0..*" Reunion_de_la_junta_directiva : attendessTo

@enduml